some change in paragraph tag

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                  <div class="item">
                     <h3>Pilih Properti <span>01</span></h3>
-                    <p>Cari properti yang diinginkan sesuai dengan kriteria anda dan keluarga. Cara memilih properti yang bijak dapat anda baca lebih lanjut di sin</p>
+                    <p>Cari properti done diinginkan sesuai dengan kriteria anda dan keluarga. Cara memilih properti yang bijak dapat anda baca lebih lanjut di sin</p>
                     
                     <a href="#">
                         Baca lebih Lanjut
